--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       name="keywords"
       content="messages, web application, fakechallenge, "
     />
+    <title>(1) WhatsApp</title>
     <link
       rel="shortcut icon"
       href="img/whatsapp-icon.png"
       type="image/x-icon"
     />
-    <title>(1) WhatsApp</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body></body>
 </html>
