added general structure

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+  <header></header>
   <body></body>
+  <footer></footer>
 </html>
