fixed tags order

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <header></header>
-  <body></body>
-  <footer></footer>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
