organized icons in navbar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <nav>
-        <div>
+        <div class="chat-panel">
           <!-- Message icon -->
           <div class="icon">
             <svg
@@ -126,7 +126,7 @@
               ></path>
             </svg>
           </div>
-          <hr />
+          <hr class="sep-bar-navbar" />
           <!-- Saved chats icon -->
           <div class="icon">
             <svg
@@ -164,7 +164,7 @@
             </svg>
           </div>
         </div>
-        <div>
+        <div class="user-panel">
           <!-- Configurations -->
           <div class="icon">
             <svg
@@ -185,7 +185,13 @@
             </svg>
           </div>
           <!-- User -->
-          <div class="icon"></div>
+          <div class="icon">
+            <img
+              src="./img/avatar.jpeg"
+              alt="user avatar"
+              class="user-avatar"
+            />
+          </div>
         </div>
       </nav>
     </header>
