added chat zone

--- a/index.html
+++ b/index.html
@@ -287,6 +287,76 @@
             </svg>
           </div>
         </div>
+        <div class="chat-panel-main">
+          <div class="chat-panel-main-card">
+            <div class="chat-avatar">
+              <img src="./img/avatar1.png" alt="Juan Avatar" />
+            </div>
+            <div class="chat-info">
+              <h3 class="chat-username">Juan</h3>
+              <span class="chat-shorttext">
+                <div class="message-status-indicator">
+                  <img src="./img/blue-double-tick.png" alt="read message" />
+                </div>
+                <p>Hablamos cuando llegues</p>
+              </span>
+            </div>
+            <div class="chat-time">
+              <p>10:45</p>
+            </div>
+          </div>
+          <div class="chat-panel-main-card">
+            <div class="chat-avatar">
+              <img src="./img/avatar2.png" alt="Maria Avatar" />
+            </div>
+            <div class="chat-info">
+              <h3 class="chat-username">Maria</h3>
+              <span class="chat-shorttext">
+                <div class="message-status-indicator">
+                  <img src="./img/blue-double-tick.png" alt="read message" />
+                </div>
+                <p>Hablamos cuando llegues</p>
+              </span>
+            </div>
+            <div class="chat-time">
+              <p>12:10</p>
+            </div>
+          </div>
+          <div class="chat-panel-main-card">
+            <div class="chat-avatar">
+              <img src="./img/avatar3.png" alt="Pedro Avatar" />
+            </div>
+            <div class="chat-info">
+              <h3 class="chat-username">Pedro</h3>
+              <span class="chat-shorttext">
+                <div class="message-status-indicator">
+                  <img src="./img/blue-double-tick.png" alt="read message" />
+                </div>
+                <p>Hablamos cuando llegues</p>
+              </span>
+            </div>
+            <div class="chat-time">
+              <p>15:15</p>
+            </div>
+          </div>
+          <div class="chat-panel-main-card">
+            <div class="chat-avatar">
+              <img src="./img/avatar4.png" alt="Mario Avatar" />
+            </div>
+            <div class="chat-info">
+              <h3 class="chat-username">Mario</h3>
+              <span class="chat-shorttext">
+                <div class="message-status-indicator">
+                  <img src="./img/blue-double-tick.png" alt="read message" />
+                </div>
+                <p>Hablamos cuando llegues</p>
+              </span>
+            </div>
+            <div class="chat-time">
+              <p>13:00</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
