create chat-box section

--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
           </div>
         </div>
       </section>
+      <section class="chat-box"></section>
     </main>
     <footer></footer>
   </body>
