--- a/index.html
+++ b/index.html
@@ -360,23 +360,25 @@
           </div>
         </section>
         <section class="chat-box">
-          <div>
-            <img
-              src="./img/chat-box-intro.png"
-              alt="whatsapp introductory image"
-            />
+          <div class="chat-box-main">
+            <div class="chat-box-intro-img">
+              <img
+                src="./img/chat-box-intro.png"
+                alt="whatsapp introductory image"
+              />
+            </div>
+            <div class="chat-box-intro-txt">
+              <h2>Descarga WhatsApp para Windows</h2>
+              <p>
+                Descarga la aplicación para Windows y haz llamadas, comparte
+                pantalla y disfruta de una experiencia más rápida.
+              </p>
+            </div>
+            <div class="chat-box-intro-btn">
+              <button>Descargar de Microsoft Store</button>
+            </div>
           </div>
-          <div>
-            <h2>Descarga WhatsApp para Windows</h2>
-            <p>
-              Descarga la aplicación para Windows y haz llamadas, comparte
-              pantalla y disfruta de una experiencia más rápida.
-            </p>
-          </div>
-          <div>
-            <button>Descargar de Microsoft Store</button>
-          </div>
-          <div>
+          <div class="chat-box-intro-footer">
             <svg
               viewBox="0 0 10 12"
               height="12"
