added functionality to the arrow

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     height="20"
                     width="19"
                     preserveAspectRatio="xMidYMid meet"
-                    class=""
+                    class="chat-arrow"
                     version="1.1"
                     x="0px"
                     y="0px"
@@ -353,7 +353,7 @@
                     height="20"
                     width="19"
                     preserveAspectRatio="xMidYMid meet"
-                    class=""
+                    class="chat-arrow"
                     version="1.1"
                     x="0px"
                     y="0px"
@@ -393,7 +393,7 @@
                     height="20"
                     width="19"
                     preserveAspectRatio="xMidYMid meet"
-                    class=""
+                    class="chat-arrow"
                     version="1.1"
                     x="0px"
                     y="0px"
@@ -433,7 +433,7 @@
                     height="20"
                     width="19"
                     preserveAspectRatio="xMidYMid meet"
-                    class=""
+                    class="chat-arrow"
                     version="1.1"
                     x="0px"
                     y="0px"
