starting the test chat box

--- a/pages/chat-test.html
+++ b/pages/chat-test.html
@@ -15,10 +15,10 @@
     <title>(1) WhatsApp</title>
     <link
       rel="shortcut icon"
-      href="img/whatsapp-icon.png"
+      href="../img/whatsapp-icon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
@@ -187,7 +187,7 @@
           <!-- User -->
           <div class="icon">
             <img
-              src="./img/avatar.jpeg"
+              src="../img/avatar.jpeg"
               alt="user avatar"
               class="user-avatar"
             />
@@ -289,166 +289,170 @@
             </div>
           </div>
           <div class="chat-panel-main">
-            <div class="chat-panel-main-card">
-              <div class="card-wrapper">
-                <div class="chat-avatar">
-                  <img src="./img/avatar1.png" alt="Juan Avatar" />
-                </div>
-                <div class="chat-info">
-                  <div class="chat-info-wrapper">
-                    <h3 class="chat-username">Juan</h3>
-                    <span class="chat-shorttext">
-                      <div class="message-status-indicator">
-                        <img
-                          src="./img/blue-double-tick.png"
-                          alt="read message"
-                        />
-                      </div>
-                      <p>Hablamos cuando llegues</p>
-                    </span>
+            <a href="chat-test.html">
+              <div class="chat-panel-main-card">
+                <div class="card-wrapper">
+                  <div class="chat-avatar">
+                    <img src="../img/avatar1.png" alt="Juan Avatar" />
                   </div>
-                  <div class="message-info-wrapper">
-                    <p class="chat-time">10:45</p>
-                    <svg
-                      viewBox="0 0 19 20"
-                      height="20"
-                      width="19"
-                      preserveAspectRatio="xMidYMid meet"
-                      class="chat-arrow"
-                      version="1.1"
-                      x="0px"
-                      y="0px"
-                    >
-                      <title>down</title>
-                      <path
-                        fill="currentColor"
-                        d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
-                      ></path>
-                    </svg>
+                  <div class="chat-info">
+                    <div class="chat-info-wrapper">
+                      <h3 class="chat-username">Juan</h3>
+                      <span class="chat-shorttext">
+                        <div class="message-status-indicator">
+                          <img
+                            src="../img/blue-double-tick.png"
+                            alt="read message"
+                          />
+                        </div>
+                        <p>Hablamos cuando llegues</p>
+                      </span>
+                    </div>
+                    <div class="message-info-wrapper">
+                      <p class="chat-time">10:45</p>
+                      <svg
+                        viewBox="0 0 19 20"
+                        height="20"
+                        width="19"
+                        preserveAspectRatio="xMidYMid meet"
+                        class="chat-arrow"
+                        version="1.1"
+                        x="0px"
+                        y="0px"
+                      >
+                        <title>down</title>
+                        <path
+                          fill="currentColor"
+                          d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
+                        ></path>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="chat-panel-main-card">
-              <div class="card-wrapper">
-                <div class="chat-avatar">
-                  <img src="./img/avatar2.png" alt="Maria Avatar" />
-                </div>
-                <div class="chat-info">
-                  <div class="chat-info-wrapper">
-                    <h3 class="chat-username">Maria</h3>
-                    <span class="chat-shorttext">
-                      <div class="message-status-indicator">
-                        <img
-                          src="./img/blue-double-tick.png"
-                          alt="read message"
-                        />
-                      </div>
-                      <p>Hablamos cuando llegues</p>
-                    </span>
+                </div></div
+            ></a>
+            <a href="chat-test.html"
+              ><div class="chat-panel-main-card">
+                <div class="card-wrapper">
+                  <div class="chat-avatar">
+                    <img src="../img/avatar2.png" alt="Maria Avatar" />
                   </div>
-                  <div class="message-info-wrapper">
-                    <p class="chat-time">10:45</p>
-                    <svg
-                      viewBox="0 0 19 20"
-                      height="20"
-                      width="19"
-                      preserveAspectRatio="xMidYMid meet"
-                      class="chat-arrow"
-                      version="1.1"
-                      x="0px"
-                      y="0px"
-                    >
-                      <title>down</title>
-                      <path
-                        fill="currentColor"
-                        d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
-                      ></path>
-                    </svg>
+                  <div class="chat-info">
+                    <div class="chat-info-wrapper">
+                      <h3 class="chat-username">Maria</h3>
+                      <span class="chat-shorttext">
+                        <div class="message-status-indicator">
+                          <img
+                            src="../img/blue-double-tick.png"
+                            alt="read message"
+                          />
+                        </div>
+                        <p>Hablamos cuando llegues</p>
+                      </span>
+                    </div>
+                    <div class="message-info-wrapper">
+                      <p class="chat-time">10:45</p>
+                      <svg
+                        viewBox="0 0 19 20"
+                        height="20"
+                        width="19"
+                        preserveAspectRatio="xMidYMid meet"
+                        class="chat-arrow"
+                        version="1.1"
+                        x="0px"
+                        y="0px"
+                      >
+                        <title>down</title>
+                        <path
+                          fill="currentColor"
+                          d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
+                        ></path>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="chat-panel-main-card">
-              <div class="card-wrapper">
-                <div class="chat-avatar">
-                  <img src="./img/avatar3.png" alt="Pedro Avatar" />
-                </div>
-                <div class="chat-info">
-                  <div class="chat-info-wrapper">
-                    <h3 class="chat-username">Pedro</h3>
-                    <span class="chat-shorttext">
-                      <div class="message-status-indicator">
-                        <img
-                          src="./img/blue-double-tick.png"
-                          alt="read message"
-                        />
-                      </div>
-                      <p>Hablamos cuando llegues</p>
-                    </span>
+                </div></div
+            ></a>
+            <a href="chat-test.html"
+              ><div class="chat-panel-main-card">
+                <div class="card-wrapper">
+                  <div class="chat-avatar">
+                    <img src="../img/avatar3.png" alt="Pedro Avatar" />
                   </div>
-                  <div class="message-info-wrapper">
-                    <p class="chat-time">10:45</p>
-                    <svg
-                      viewBox="0 0 19 20"
-                      height="20"
-                      width="19"
-                      preserveAspectRatio="xMidYMid meet"
-                      class="chat-arrow"
-                      version="1.1"
-                      x="0px"
-                      y="0px"
-                    >
-                      <title>down</title>
-                      <path
-                        fill="currentColor"
-                        d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
-                      ></path>
-                    </svg>
+                  <div class="chat-info">
+                    <div class="chat-info-wrapper">
+                      <h3 class="chat-username">Pedro</h3>
+                      <span class="chat-shorttext">
+                        <div class="message-status-indicator">
+                          <img
+                            src="../img/blue-double-tick.png"
+                            alt="read message"
+                          />
+                        </div>
+                        <p>Hablamos cuando llegues</p>
+                      </span>
+                    </div>
+                    <div class="message-info-wrapper">
+                      <p class="chat-time">10:45</p>
+                      <svg
+                        viewBox="0 0 19 20"
+                        height="20"
+                        width="19"
+                        preserveAspectRatio="xMidYMid meet"
+                        class="chat-arrow"
+                        version="1.1"
+                        x="0px"
+                        y="0px"
+                      >
+                        <title>down</title>
+                        <path
+                          fill="currentColor"
+                          d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
+                        ></path>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="chat-panel-main-card">
-              <div class="card-wrapper">
-                <div class="chat-avatar">
-                  <img src="./img/avatar4.png" alt="Mario Avatar" />
-                </div>
-                <div class="chat-info">
-                  <div class="chat-info-wrapper">
-                    <h3 class="chat-username">Mario</h3>
-                    <span class="chat-shorttext">
-                      <div class="message-status-indicator">
-                        <img
-                          src="./img/blue-double-tick.png"
-                          alt="read message"
-                        />
-                      </div>
-                      <p>Hablamos cuando llegues</p>
-                    </span>
+                </div></div
+            ></a>
+            <a href="chat-test.html"
+              ><div class="chat-panel-main-card">
+                <div class="card-wrapper">
+                  <div class="chat-avatar">
+                    <img src="../img/avatar4.png" alt="Mario Avatar" />
                   </div>
-                  <div class="message-info-wrapper">
-                    <p class="chat-time">10:45</p>
-                    <svg
-                      viewBox="0 0 19 20"
-                      height="20"
-                      width="19"
-                      preserveAspectRatio="xMidYMid meet"
-                      class="chat-arrow"
-                      version="1.1"
-                      x="0px"
-                      y="0px"
-                    >
-                      <title>down</title>
-                      <path
-                        fill="currentColor"
-                        d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
-                      ></path>
-                    </svg>
+                  <div class="chat-info">
+                    <div class="chat-info-wrapper">
+                      <h3 class="chat-username">Mario</h3>
+                      <span class="chat-shorttext">
+                        <div class="message-status-indicator">
+                          <img
+                            src="../img/blue-double-tick.png"
+                            alt="read message"
+                          />
+                        </div>
+                        <p>Hablamos cuando llegues</p>
+                      </span>
+                    </div>
+                    <div class="message-info-wrapper">
+                      <p class="chat-time">10:45</p>
+                      <svg
+                        viewBox="0 0 19 20"
+                        height="20"
+                        width="19"
+                        preserveAspectRatio="xMidYMid meet"
+                        class="chat-arrow"
+                        version="1.1"
+                        x="0px"
+                        y="0px"
+                      >
+                        <title>down</title>
+                        <path
+                          fill="currentColor"
+                          d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
+                        ></path>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-              </div>
-            </div>
+                </div></div
+            ></a>
           </div>
         </section>
         <section class="chat-box">
