added header to chat box

--- a/pages/chat-test.html
+++ b/pages/chat-test.html
@@ -456,6 +456,15 @@
           </div>
         </section>
         <section class="chat-box">
+          <div class="chat-box-header">
+            <div class="chat-box-user-avatar">
+              <img src="../img/avatar1.png" alt="user avatar" />
+            </div>
+            <div class="chat-box-user-info">
+              <h2 class="username">Juan</h2>
+              <p class="last-connection">últ. vez hoy a la(s) 12:34</p>
+            </div>
+          </div>
           <div class="chat-box-main"></div>
         </section>
       </div>
