--- a/pages/chat-test.html
+++ b/pages/chat-test.html
@@ -197,7 +197,7 @@
     </header>
     <main>
       <div class="main-wrapper">
-        <section class="chat-panel">
+        <section class="chat-sidebar">
           <div class="chat-panel-header">
             <h2 class="chat-panel-header-title">Chats</h2>
             <div class="chat-panel-header-options">
@@ -288,10 +288,10 @@
               </svg>
             </div>
           </div>
-          <div class="chat-panel-main">
+          <div class="chat-sidebar-main">
             <a href="chat-test.html">
-              <div class="chat-panel-main-card">
-                <div class="card-wrapper">
+              <div class="chat-sidebar-main-card">
+                <div class="card-wrapper active">
                   <div class="chat-avatar">
                     <img src="../img/avatar1.png" alt="Juan Avatar" />
                   </div>
@@ -331,7 +331,7 @@
                 </div></div
             ></a>
             <a href="chat-test.html"
-              ><div class="chat-panel-main-card">
+              ><div class="chat-sidebar-main-card">
                 <div class="card-wrapper">
                   <div class="chat-avatar">
                     <img src="../img/avatar2.png" alt="Maria Avatar" />
@@ -372,7 +372,7 @@
                 </div></div
             ></a>
             <a href="chat-test.html"
-              ><div class="chat-panel-main-card">
+              ><div class="chat-sidebar-main-card">
                 <div class="card-wrapper">
                   <div class="chat-avatar">
                     <img src="../img/avatar3.png" alt="Pedro Avatar" />
@@ -413,7 +413,7 @@
                 </div></div
             ></a>
             <a href="chat-test.html"
-              ><div class="chat-panel-main-card">
+              ><div class="chat-sidebar-main-card">
                 <div class="card-wrapper">
                   <div class="chat-avatar">
                     <img src="../img/avatar4.png" alt="Mario Avatar" />
