fixed bg in chat-box

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           </div>
         </section>
         <section class="chat-box">
-          <div class="chat-box-main">
+          <div class="chat-box-main-no-bg">
             <div class="chat-box-intro-img">
               <img
                 src="./img/chat-box-intro.png"
