--- a/pages/chat-test.html
+++ b/pages/chat-test.html
@@ -465,7 +465,7 @@
               <p class="last-connection">últ. vez hoy a la(s) 12:34</p>
             </div>
           </div>
-          <div class="chat-box-main"></div>
+          <div class="chat-box-main-bg"></div>
           <div class="chat-box-input-main-wrapper">
             <div class="chat-box-input-moreoptions-icon">
               <svg
