--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
       </nav>
     </header>
     <main>
-      <section class="chat-panel">
-        <div class="chat-panel-header">
-          <h2 class="chat-panel-header-title">Chats</h2>
-          <div class="chat-panel-header-options">
-            <div class="chat-panel-header-options-icons">
+      <section class="chat-sidebar">
+        <div class="chat-sidebar-header">
+          <h2 class="chat-sidebar-header-title">Chats</h2>
+          <div class="chat-sidebar-header-options">
+            <div class="chat-sidebar-header-options-icons">
               <svg
                 viewBox="0 0 24 24"
                 height="24"
@@ -222,7 +222,7 @@
                 ></path>
               </svg>
             </div>
-            <div class="chat-panel-header-options-icons">
+            <div class="chat-sidebar-header-options-icons">
               <svg
                 viewBox="0 0 24 24"
                 height="24"
@@ -243,7 +243,7 @@
             </div>
           </div>
         </div>
-        <div class="chat-panel-searchbar">
+        <div class="chat-sidebar-searchbar">
           <div class="searchbar-wrapper">
             <div class="search-button">
               <svg
@@ -287,7 +287,7 @@
             </svg>
           </div>
         </div>
-        <div class="chat-panel-main">
+        <div class="chat-sidebar-main">
           <div class="chat-panel-main-card">
             <div class="card-wrapper">
               <div class="chat-avatar">
