fixing issues with sizes

--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
               </div>
               <div class="form-wrapper">
                 <form action="">
-                  <input class="searchbar" />
+                  <input class="searchbar" placeholder="Buscar" />
                 </form>
               </div>
             </div>
-            <div class="chat-panel-searchbar-filter-button">
+            <div class="chat-sidebar-searchbar-filter-button">
               <svg
                 viewBox="0 0 24 24"
                 height="20"
@@ -288,9 +288,9 @@
               </svg>
             </div>
           </div>
-          <div class="chat-panel-main">
+          <div class="chat-sidebar-main">
             <a href="./pages/chat-test.html">
-              <div class="chat-panel-main-card">
+              <div class="chat-sidebar-main-card">
                 <div class="card-wrapper">
                   <div class="chat-avatar">
                     <img src="./img/avatar1.png" alt="Juan Avatar" />
