--- a/pages/chat-test.html
+++ b/pages/chat-test.html
@@ -198,10 +198,10 @@
     <main>
       <div class="main-wrapper">
         <section class="chat-sidebar">
-          <div class="chat-panel-header">
-            <h2 class="chat-panel-header-title">Chats</h2>
-            <div class="chat-panel-header-options">
-              <div class="chat-panel-header-options-icons">
+          <div class="chat-sidebar-header">
+            <h2 class="chat-sidebar-header-title">Chats</h2>
+            <div class="chat-sidebar-header-options">
+              <div class="chat-sidebar-header-options-icons">
                 <svg
                   viewBox="0 0 24 24"
                   height="24"
@@ -223,7 +223,7 @@
                   ></path>
                 </svg>
               </div>
-              <div class="chat-panel-header-options-icons">
+              <div class="chat-sidebar-header-options-icons">
                 <svg
                   viewBox="0 0 24 24"
                   height="24"
@@ -244,7 +244,7 @@
               </div>
             </div>
           </div>
-          <div class="chat-panel-searchbar">
+          <div class="chat-sidebar-searchbar">
             <div class="searchbar-wrapper">
               <div class="search-button">
                 <svg
@@ -267,11 +267,11 @@
               </div>
               <div class="form-wrapper">
                 <form action="">
-                  <input class="searchbar" />
+                  <input class="searchbar" placeholder="Buscar" />
                 </form>
               </div>
             </div>
-            <div class="chat-panel-searchbar-filter-button">
+            <div class="chat-sidebar-searchbar-filter-button">
               <svg
                 viewBox="0 0 24 24"
                 height="20"
