fixed minor issues

--- a/index.html
+++ b/index.html
@@ -455,8 +455,9 @@
             ></a>
           </div>
         </section>
-        <section class="chat-box">
-          <div class="chat-box-main-no-bg">
+        <section class="chat-box-intro">
+          <div class="chat-box-intro-header"></div>
+          <div class="chat-box-intro-main">
             <div class="chat-box-intro-img">
               <img
                 src="./img/chat-box-intro.png"
