--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav>
         <div class="chat-panel">
           <!-- Message icon -->
-          <div class="icon">
+          <div class="icon active-icon">
             <svg
               viewBox="0 0 24 24"
               height="24"
