--- a/pages/chat-test.html
+++ b/pages/chat-test.html
@@ -25,7 +25,7 @@
       <nav>
         <div class="chat-panel">
           <!-- Message icon -->
-          <div class="icon">
+          <div class="icon active-icon">
             <svg
               viewBox="0 0 24 24"
               height="24"
@@ -46,6 +46,7 @@
                 fill="currentColor"
               ></path>
             </svg>
+            <div class="bubble-icon">1</div>
           </div>
           <!-- Group icon -->
           <div class="icon">
@@ -310,28 +311,32 @@
                     </div>
                     <div class="message-info-wrapper">
                       <p class="chat-time">10:45</p>
-                      <svg
-                        viewBox="0 0 19 20"
-                        height="20"
-                        width="19"
-                        preserveAspectRatio="xMidYMid meet"
-                        class="chat-arrow"
-                        version="1.1"
-                        x="0px"
-                        y="0px"
-                      >
-                        <title>down</title>
-                        <path
-                          fill="currentColor"
-                          d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
-                        ></path>
-                      </svg>
+                      <div class="message-info">
+                        <svg
+                          viewBox="0 0 19 20"
+                          height="20"
+                          width="19"
+                          preserveAspectRatio="xMidYMid meet"
+                          class="chat-arrow"
+                          version="1.1"
+                          x="0px"
+                          y="0px"
+                        >
+                          <title>down</title>
+                          <path
+                            fill="currentColor"
+                            d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
+                          ></path>
+                        </svg>
+                      </div>
                     </div>
                   </div>
                 </div></div
             ></a>
             <a href="chat-test.html"
-              ><div class="chat-sidebar-main-card">
+              ><div
+                class="chat-sidebar-main-card chat-sidebar-incoming-message"
+              >
                 <div class="card-wrapper">
                   <div class="chat-avatar">
                     <img src="../img/avatar2.png" alt="Maria Avatar" />
@@ -351,22 +356,25 @@
                     </div>
                     <div class="message-info-wrapper">
                       <p class="chat-time">10:45</p>
-                      <svg
-                        viewBox="0 0 19 20"
-                        height="20"
-                        width="19"
-                        preserveAspectRatio="xMidYMid meet"
-                        class="chat-arrow"
-                        version="1.1"
-                        x="0px"
-                        y="0px"
-                      >
-                        <title>down</title>
-                        <path
-                          fill="currentColor"
-                          d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
-                        ></path>
-                      </svg>
+                      <div class="message-info">
+                        <div class="chat-sidebar-bubble-icon">1</div>
+                        <svg
+                          viewBox="0 0 19 20"
+                          height="20"
+                          width="19"
+                          preserveAspectRatio="xMidYMid meet"
+                          class="chat-arrow"
+                          version="1.1"
+                          x="0px"
+                          y="0px"
+                        >
+                          <title>down</title>
+                          <path
+                            fill="currentColor"
+                            d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
+                          ></path>
+                        </svg>
+                      </div>
                     </div>
                   </div>
                 </div></div
@@ -392,22 +400,24 @@
                     </div>
                     <div class="message-info-wrapper">
                       <p class="chat-time">10:45</p>
-                      <svg
-                        viewBox="0 0 19 20"
-                        height="20"
-                        width="19"
-                        preserveAspectRatio="xMidYMid meet"
-                        class="chat-arrow"
-                        version="1.1"
-                        x="0px"
-                        y="0px"
-                      >
-                        <title>down</title>
-                        <path
-                          fill="currentColor"
-                          d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
-                        ></path>
-                      </svg>
+                      <div class="message-info">
+                        <svg
+                          viewBox="0 0 19 20"
+                          height="20"
+                          width="19"
+                          preserveAspectRatio="xMidYMid meet"
+                          class="chat-arrow"
+                          version="1.1"
+                          x="0px"
+                          y="0px"
+                        >
+                          <title>down</title>
+                          <path
+                            fill="currentColor"
+                            d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
+                          ></path>
+                        </svg>
+                      </div>
                     </div>
                   </div>
                 </div></div
@@ -433,22 +443,24 @@
                     </div>
                     <div class="message-info-wrapper">
                       <p class="chat-time">10:45</p>
-                      <svg
-                        viewBox="0 0 19 20"
-                        height="20"
-                        width="19"
-                        preserveAspectRatio="xMidYMid meet"
-                        class="chat-arrow"
-                        version="1.1"
-                        x="0px"
-                        y="0px"
-                      >
-                        <title>down</title>
-                        <path
-                          fill="currentColor"
-                          d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
-                        ></path>
-                      </svg>
+                      <div class="message-info">
+                        <svg
+                          viewBox="0 0 19 20"
+                          height="20"
+                          width="19"
+                          preserveAspectRatio="xMidYMid meet"
+                          class="chat-arrow"
+                          version="1.1"
+                          x="0px"
+                          y="0px"
+                        >
+                          <title>down</title>
+                          <path
+                            fill="currentColor"
+                            d="M3.8,6.7l5.7,5.7l5.7-5.7l1.6,1.6l-7.3,7.2L2.2,8.3L3.8,6.7z"
+                          ></path>
+                        </svg>
+                      </div>
                     </div>
                   </div>
                 </div></div
